--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "redux-logger": "^3.0.6",
     "shadcn-ui": "^0.9.4",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
