--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,9 +18,13 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-syntax-highlighter": "^15.6.1",
     "redux-logger": "^3.0.6",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "shadcn-ui": "^0.9.4",
     "tailwindcss": "^4.0.0",
     "winston": "^3.17.0"
