--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.3",
     "redux-logger": "^3.0.6",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
